--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ iced.features = ["highlighter", "canvas", "svg", "advanced", "tokio", "debug"]
 tokio.workspace = true
 tokio.features = ["fs"]
 
+rand = "0.8"
+
 
 [workspace]
 members = [
